--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "express": "^4.18.2",
     "redis": "^4.4.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
